--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -2,36 +2,36 @@
   padding-top: 0;
 
   &__list {
-  display: flex;
-  gap: 30px;
-  } 
+    @include flexCenter(flex);
+    gap: 30px;
+  }
 
   &__img {
-  position: relative;
+    position: relative;
   }
 
   &__desc {
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--about-bg);
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--about-bg);
   }
 
   &__text {
-  font-family: inherit;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--secondary-accent-color);
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--secondary-accent-color);
   }
 }
 
