--- a/sass/components/_contacts-in-header.scss
+++ b/sass/components/_contacts-in-header.scss
@@ -7,8 +7,7 @@
   }
 
   &__link {
-    display: flex;
-    align-items: center;
+    @include flexCenter($type: flex, $cross-axis: center);
     gap: 10px;
     color: var(--secondary-text-color);
     padding-top: 32px;
