--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -16,19 +16,19 @@
   gap: 30px;
 
   &__title {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
   }
 
   &__desc {
-  font-size: 14px;
-  line-height: calc(24 / 14);
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
+    font-size: 14px;
+    line-height: calc(24 / 14);
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
   }
 }
 
@@ -37,9 +37,7 @@
 }
 
 .features__img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include flexCenter($type: flex, $main-axis: center, $cross-axis: center);
   height: 120px;
   background-color: var(--third-background-color);
   margin-bottom: 30px;
