--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -21,9 +21,7 @@
 }
 
 .contacts__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+  @include flexCenter($type: flex, $main-axis: space-between, $cross-axis: baseline);
 }
 
 .address {
@@ -56,6 +54,7 @@
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
     color: var(--contact-accent-color);
+    transition: color var(--animation);
   }
 
   &__link__contact--focused:hover,
@@ -76,14 +75,12 @@
 }
 
 .contacts__list {
-  display: flex;
+  @include flexCenter($type: flex);
   gap: 10px;
 }
 
 .contacts__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flexCenter($type: flex, $main-axis: center, $cross-axis: center);
   width: 44px;
   height: 44px;
   background-color: var(--footer-socials-bg);
@@ -112,7 +109,7 @@
 }
 
 .subscribe__form {
-  display: flex;
+  @include flexCenter($type: flex);
   gap: 12px;
 }
 
@@ -130,7 +127,7 @@
 }
 
 .subscribe__btn {
-  display: flex;
+  @include flexCenter($type: flex);
   gap: 10px;
   justify-content: center;
   align-items: center;
