--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -74,6 +74,7 @@
 
   &__title {
     display: block;
+    margin-bottom: 12px;
     font-weight: 400;
     font-size: 12px;
     line-height: calc(14 / 12);
