--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,13 +1,10 @@
 .socials {
-  display: flex;
+  @include flexCenter($type: flex, $main-axis: center);
   gap: 10px;
-  justify-content: center;
   margin-bottom: 30px;
 
   &__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flexCenter($type: flex, $main-axis: center, $cross-axis: center);
     width: 44px;
     height: 44px;
     background-color: var(--main-background-color);
