--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -16,7 +16,7 @@
 }
 
 .team__list {
-  display: flex;
+  @include flexCenter($type:flex);
   gap: 30px;
 }
 
@@ -29,7 +29,7 @@
 
 .team__desc {
   padding-top: 30px;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
   margin-left: auto;
   margin-right: auto;
 
