--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -30,3 +30,13 @@
   --socials-icon-color: #afb1b8;
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+%section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+@mixin flexCenter($type:flex, $main-axis:center, $cross-axis:center)
+{display: $type;
+justify-content: $main-axis;
+align-items: $cross-axis;} 
