--- a/css/main.css
+++ b/css/main.css
@@ -28,11 +28,6 @@
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 /* Body */
 .page {
   font-family: var(--main-font);
@@ -41,11 +36,21 @@
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
+  width: 480px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 h1,
@@ -62,6 +67,17 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 /* Cancel list labels */
@@ -95,6 +111,151 @@ img {
           align-items: center;
 }
 
+.menu-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+  margin-left: auto;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: fill var(--animation);
+  transition: fill var(--animation);
+}
+.menu-btn:hover .menu-btn__icon, .menu-btn:focus .menu-btn__icon {
+  fill: var(--acent-text-color);
+}
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+
+.menu-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary-accent-color);
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: var(--animation);
+  transition: var(--animation);
+}
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: fill var(--animation);
+  transition: fill var(--animation);
+}
+.menu-toggle:hover .menu-toggle_icon, .menu-toggle:focus .menu-toggle_icon {
+  fill: var(--acent-text-color);
+}
+
+.mobile-list {
+  margin-top: 48px;
+  margin-left: 40px;
+  margin-bottom: auto;
+}
+
+.mobile-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-list__link {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+  -webkit-transition: color var(--animation);
+  transition: color var(--animation);
+}
+.mobile-list__link.current {
+  color: var(--acent-text-color);
+}
+.mobile-list__link:hover, .mobile-list__link:focus {
+  color: var(--acent-text-color);
+}
+
+.mobile-contact {
+  margin-left: 40px;
+}
+
+.mobile-contact__link {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.1764705882;
+  letter-spacing: 0.02em;
+}
+
+.mobile-tel {
+  display: block;
+  color: var(--acent-text-color);
+  margin-bottom: 32px;
+}
+
+.mobile-mail {
+  display: block;
+  color: var(--secondary-text-color);
+  margin-bottom: 64px;
+}
+
+.mobile-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  margin-left: 40px;
+  margin-bottom: 48px;
+}
+
+.mobile-socials__item {
+  padding-right: 10px;
+}
+
+.mobile-socials__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-socials__link {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  letter-spacing: 0.02em;
+  color: var(--acent-text-color);
+}
+
 .header__logo {
   font-family: inherit;
   color: var(--secondary-logo-color);
@@ -103,9 +264,14 @@ img {
   font-size: 26px;
   line-height: 1.1923076923;
   letter-spacing: 0.03em;
-  margin-right: 93px;
+  margin-right: 88px;
   padding-top: 25px;
   padding-bottom: 25px;
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 88px;
+  }
 }
 
 .part__logo {
@@ -124,15 +290,20 @@ img {
           align-items: center;
 }
 .header__nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .header__nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .header__nav__item:not(:last-child) {
   margin-right: 50px;
@@ -170,30 +341,64 @@ img {
 }
 
 .contact-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: auto;
+  display: none;
 }
-.contact-list__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-left: auto;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact-list__item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 .contact-list__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 10px;
   color: var(--secondary-text-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
   -webkit-transition: color var(--animation);
   transition: color var(--animation);
+}
+@media screen and (min-width: 1200px) {
+  .contact-list__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 .contact-list__link--focused:hover, .contact-list__link--focused:focus {
   color: var(--acent-text-color);
@@ -210,29 +415,43 @@ img {
 
 .hero-container {
   max-width: 1600px;
-  height: 600px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--secondary-background-color);
   text-align: center;
-  padding-bottom: 200px;
-  padding-top: 200px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/img-1.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/img-1.jpg);
+  padding-bottom: 118px;
+  padding-top: 118px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/hero/img-1.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/img-1.jpg);
+}
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    height: 600px;
+    padding-bottom: 200px;
+    padding-top: 200px;
+  }
 }
 
 .hero__title {
   margin: 0 auto 40px;
-  width: 696px;
+  width: 360px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3636363636;
+  font-size: 26px;
+  line-height: 1.6153846154;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--secondary-accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
 }
 
 .button {
@@ -277,11 +496,15 @@ img {
   margin: -1px;
 }
 
-.features__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .features__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 .features__list__title {
   margin-bottom: 10px;
@@ -290,6 +513,7 @@ img {
   line-height: 1.1428571429;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
 }
 .features__list__desc {
   font-size: 14px;
@@ -297,10 +521,29 @@ img {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
+@media screen and (min-width: 1200px) {
+  .features__list__desc {
+    margin-bottom: 0;
+  }
+}
 
 .features__item {
-  -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
+  max-width: 450px;
+}
+@media screen and (max-width: 1199px) {
+  .features__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+        flex-basis: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) + 1));
+        flex-basis: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) + 1));
+  }
+}
+.features__item:not(:last-child) {
+  margin-bottom: 30px;
 }
 
 .features__img {
@@ -319,7 +562,13 @@ img {
 }
 
 .about {
+  display: none;
   padding-top: 0;
+}
+@media screen and (min-width: 1200px) {
+  .about {
+    display: block;
+  }
 }
 .about__list {
   display: -webkit-box;
@@ -385,31 +634,54 @@ img {
 .team__title {
   margin-bottom: 50px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1785714286;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.1666666667;
+  }
+}
 
-.team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 30px;
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .team__item {
+  max-width: 450px;
   background-color: var(--secondary-accent-color);
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+        flex-basis: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) + 1));
+        flex-basis: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) + 1));
+  }
 }
 
 .team__desc {
@@ -473,24 +745,40 @@ img {
 
 .clients__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1666666667;
+  font-size: 28px;
+  line-height: 1.1785714286;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    line-height: 1.1666666667;
+  }
 }
 
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
 }
 
-.clients__item {
-  -ms-flex-preferred-size: calc((100% - 150px) / 6);
-      flex-basis: calc((100% - 150px) / 6);
+@media screen and (min-width: 320px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+        flex-basis: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * (var(--work-items) + 2)) / (var(--work-items) + 3));
+        flex-basis: calc((100% - var(--work-indent) * (var(--work-items) + 2)) / (var(--work-items) + 3));
+  }
 }
 
 .clients__link {
@@ -544,20 +832,43 @@ img {
   color: var(--secondary-accent-color);
 }
 
-.contacts__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (min-width: 768px) {
+  .contacts__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    gap: 12px;
+  }
 }
 
 .address {
   font-style: normal;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .address {
+    margin-bottom: 0;
+  }
 }
 .address__item:not(:last-child) {
   margin-bottom: 9px;
@@ -599,6 +910,7 @@ img {
   text-transform: uppercase;
   color: var(--main-background-color);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .contacts__list {
@@ -630,6 +942,12 @@ img {
   border-radius: 50%;
   -webkit-transition: background-color var(--animation);
   transition: background-color var(--animation);
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    margin-bottom: 0;
+  }
 }
 .contacts__link--focused:hover {
   background-color: var(--accent-background-color);
@@ -649,24 +967,40 @@ img {
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--secondary-accent-color);
+  text-align: center;
 }
 
-.subscribe__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 12px;
+@media screen and (min-width: 768px) {
+  .subscribe__form {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    gap: 12px;
+  }
 }
 
 .subscribe__input {
   display: block;
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -676,6 +1010,18 @@ img {
   padding-left: 16px;
   outline: transparent;
   color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .subscribe__input {
+    width: 358px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    width: 358px;
+    margin-bottom: 0;
+  }
 }
 
 .subscribe__btn {
@@ -699,11 +1045,22 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 50px;
   gap: 8px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+@media screen and (min-width: 768px) {
+  .filter {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .filter__btn {
   display: block;
@@ -748,9 +1105,37 @@ img {
       flex-wrap: wrap;
   gap: 30px;
 }
-.work__item {
-  -ms-flex-preferred-size: calc(100% - var(--work-indent) * var(--work-items) - 1)/var(--work-items);
-      flex-basis: calc(100% - var(--work-indent) * var(--work-items) - 1)/var(--work-items);
+@media screen and (min-width: 768px) {
+  .work {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .work__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) - 2));
+        flex-basis: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) - 2));
+  }
+}
+@media screen and (min-width: 768px) {
+  .work__item {
+    -ms-flex-preferred-size: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+        flex-basis: calc((100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1));
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work__item {
+    -ms-flex-preferred-size: calc(100% - var(--work-indent) * var(--work-items) - 1)/var(--work-items);
+        flex-basis: calc(100% - var(--work-indent) * var(--work-items) - 1)/var(--work-items);
+  }
 }
 .work__link {
   display: block;
