--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -4,13 +4,24 @@
   background-color: var(--main-background-color);
   color: var(--main-text-color);
 }
+
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
+  width: 480px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  // Desktop styles
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
+
 h1,
 h2,
 h3,
@@ -27,7 +38,11 @@ img {
 }
 
 .section {
-  @extend %section;
+  @include section;
+
+  @media screen and (min-width: 1200px) {
+    @include section(94px);
+  }
 }
 
 /* Cancel list labels */
