--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,8 +1,14 @@
 .filter {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 50px;
   gap: 8px;
-  justify-content: center;
+  justify-content: flex-start;
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 
   &__btn {
     display: block;
