--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -21,11 +21,24 @@
 }
 
 .contacts__container {
-  @include flexCenter($type: flex, $main-axis: space-between, $cross-axis: baseline);
+  @media screen and (min-width: 768px) {
+    @include flexCenter($type: flex, $main-axis: space-around, $cross-axis: baseline);
+    flex-wrap: wrap;
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include flexCenter($type: flex, $main-axis: space-between, $cross-axis: baseline);
+    gap: 12px;
+  }
 }
 
 .address {
   font-style: normal;
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 
   &__item:not(:last-child) {
     margin-bottom: 9px;
@@ -72,6 +85,7 @@
   text-transform: uppercase;
   color: var(--main-background-color);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .contacts__list {
@@ -86,6 +100,11 @@
   background-color: var(--footer-socials-bg);
   border-radius: 50%;
   transition: background-color var(--animation);
+  margin-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+  }
 
   &--focused:hover {
     background-color: var(--accent-background-color);
@@ -106,16 +125,27 @@
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--secondary-accent-color);
+  text-align: center;
 }
 
 .subscribe__form {
-  @include flexCenter($type: flex);
-  gap: 12px;
+  @media screen and (min-width: 768px) {
+    justify-content: space-around;
+    align-items: baseline;
+    flex-direction: row;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 12px;
+  }
 }
 
 .subscribe__input {
   display: block;
-  width: 358px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -124,6 +154,16 @@
   padding-left: 16px;
   outline: transparent;
   color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    width: 358px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-bottom: 0;
+  }
 }
 
 .subscribe__btn {
