--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -8,23 +8,42 @@
 .team__title {
   margin-bottom: 50px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: calc(42 / 36);
+  font-size: 28px;
+  line-height: calc(33 / 28);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: calc(42 / 36);
+  }
 }
 
 .team__list {
-  @include flexCenter($type:flex);
-  gap: 30px;
+  @media screen and (min-width: 768px) {
+    @include flexCenter($type: flex);
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .team__item {
+  max-width: 450px;
   background-color: var(--secondary-accent-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(
+      (100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1)
+    );
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) + 1));
+  }
 }
 
 .team__desc {
