--- a/sass/components/_work-list.scss
+++ b/sass/components/_work-list.scss
@@ -1,14 +1,37 @@
 .work {
-  @include flexCenter($type: flex, $main-axis: center);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   gap: 30px;
 
+  @media screen and (min-width: 768px) {
+    justify-content: flex-start;
+  }
+
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+  }
+
   &__item {
-    flex-basis: calc(100% - var(--work-indent) * var(--work-items) - 1) / var(--work-items);
+    @media screen and (max-width: 480px) {
+      flex-basis: calc((100% - var(--work-indent) * var(--work-items)) / (var(--work-items) - 2));
+    }
+
+    @media screen and (min-width: 768px) {
+      flex-basis: calc(
+        (100% - var(--work-indent) * (var(--work-items) - 2)) / (var(--work-items) - 1)
+      );
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc(100% - var(--work-indent) * var(--work-items) - 1) / var(--work-items);
+    }
   }
 
   &__link {
     display: block;
+
     transition: box-shadow var(--animation);
 
     &--focused:hover,
