--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 // Components
 // Header
 @import './components/header';
+@import './components/menu-btn';
 // Logo
 @import './components/logo';
 // Nav
