--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -31,12 +31,13 @@
   --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-%section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@mixin section($padding: 60px) {
+  padding-top: $padding;
+  padding-bottom: $padding;
 }
 
-@mixin flexCenter($type:flex, $main-axis:center, $cross-axis:center)
-{display: $type;
-justify-content: $main-axis;
-align-items: $cross-axis;} 
+@mixin flexCenter($type: flex, $main-axis: center, $cross-axis: center) {
+  display: $type;
+  justify-content: $main-axis;
+  align-items: $cross-axis;
+}
